--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,165 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Poppins:wght@300;400;500;600&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@layer base {
+    html {
+      font-family: system-ui, sans-serif;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.hero{
+    @apply max-w-[1000px] mx-auto grid grid-cols-1 lg:grid-cols-3 place-items-center uppercase py-16;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.hero-title{
+    @apply font-bold text-2xl text-center lg:text-end tracking-wider pb-10 lg:pb-0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/*Features*/
+.features{
+    @apply grid grid-cols-1 lg:grid-cols-2 text-white;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.feature-flex{
+    @apply bg-gray-700 flex flex-col items-center justify-center space-y-6 relative w-full py-20 px-3 lg:px-0 lg:py-0
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.feature-flex-2{
+    @apply bg-gray-700 flex flex-col items-center justify-center space-y-6 relative w-full px-3 order-4 py-20 lg:py-0 lg:order-none lg:px-0
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.feature-text__behind{
+    @apply text-[150px] top-14 font-sans absolute  text-yellow-200 opacity-30
+}
+
+/* STAFF*/
+
+.staff-icons{
+    @apply flex items-center gap-5 text-xl cursor-pointer pt-4;
+}
+
+.staff-icons > * {
+    @apply duration-300;
+}
+
+.staff-icons > *:hover{
+    @apply scale-110;
+}
+/*buttons*/
+.cart-btn {
+    @apply bg-blue-500 border-2 border-blue-400 flex items-center justify-center gap-2 py-1 px-4 rounded-md shadow-sm w-full lg:max-w-max duration-300;
+}
+
+.cart-btn:hover{
+    @apply bg-transparent;
+}
+
+.extra{
+   @apply py-2 px-6;
+}
+
+.red-btn{
+    @apply bg-red-500 flex items-center justify-center gap-2 py-1 px-4 rounded-md shadow-sm w-full lg:max-w-max duration-300;
+}
+
+.success-btn{
+    @apply bg-green-500 text-white border-2 border-green-400 py-1 px-4 rounded-md shadow-sm w-full lg:max-w-max;
+}
+
+.red-btn:hover,
+.red-btn:active,
+.red-btn:focus{
+    @apply opacity-75;
+}
+
+.feature-btn{
+    @apply border-2 border-white px-16 py-2 text-sm font-semibold uppercase duration-300;
+}
+
+.feature-btn:hover{
+    @apply border-2 border-yellow-400 text-yellow-400;
+}
+
+/*Policy*/
+.policy-list{
+    @apply list-disc space-y-3 text-justify;
+}
+
+.prod-container {
+    @apply w-2/5 space-y-10;
+}
+
+/*CONTACT*/
+.contact-box{
+    @apply flex items-center gap-4  p-3 rounded-md shadow;
+}
+
+.input-container{
+    @apply flex flex-col space-y-2 lg:flex-row lg:space-y-2 lg:gap-5
+}
+
+.input-box{
+    @apply p-2 text-black rounded w-full mt-2 border border-black;
+}
+
+/*SERVICE*/
+.service-cards{
+    @apply flex flex-col lg:flex-row items-center gap-20 my-10;
+}
+
+.service-card{
+    @apply flex flex-col items-center gap-4;
+}
+
+
+
+/*Nav Bar */
+.nav{
+    @apply fixed inset-0 bg-gray-900 max-h-[10vh] shadow z-50 font-sans;
+}
+.nav-container {
+    @apply max-w-[1200px] mx-auto text-white pt-7  px-7 lg:px-0 flex items-center justify-between relative lg:pt-5;
+}
+
+.cart{
+    @apply text-lg bg-yellow-400 px-2 rounded-full text-black;
+}
+
+
+
+/*Desktop nav*/
+.nav-ul{
+    @apply items-center space-x-10 hidden lg:flex;
+}
+
+.nav-ul > *{
+    @apply duration-300;
+}
+
+.nav-ul > *:hover,
+.nav-ul > *:active,
+.nav-ul > *:focus{
+    @apply text-yellow-400;
+}
+
+/*Responsive nav*/
+.nav-responsive-container {
+    @apply absolute z-20 right-0 top-0 h-screen w-2/5   bg-white text-black dark:text-white dark:bg-black;
+}
+
+.overlay{
+    @apply block lg:hidden w-screen h-screen fixed inset-0 bg-black/20 z-10;
+}
+
+.nav-responsive-ul{
+    @apply space-y-10 flex flex-col items-center justify-center pt-24;
+}
+
+.nav-responsive-ul > *:active, 
+.nav-responsive-ul > *:focus{
+    @apply text-yellow-400
 }
