--- a/app/page.css
+++ b/app/page.css
@@ -1,74 +1,157 @@
-.intro {
-    position: relative;
-    width: 100vw;
-    height: 93vh;
-    min-height: 640px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .intro__top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 15%;
-    width: 100%;
-    background: rgb(34 197 94);
-  }
-  
-  .intro__panel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 70px;
-    z-index: 2;
-  }
-  
-  .intro__picture img {
-    width: 25vw;
-    height: auto;
-    max-height: 45vh;
-    margin-bottom: 3rem;
-  }
-  
-  .intro__title {
-    color: #513a2a;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    line-height: 1.4;
-    letter-spacing: 0.5em;
-    font-weight: bold;
-    transform: translateX(0.25em);
-    margin-bottom: 3rem;
-  }
-  
-  .intro__subtitle {
-    color: #513a2a;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    line-height: 1.4;
-    letter-spacing: 0.3em;
-    font-weight: bold;
-    transform: translateX(0.25em);
-  }
-  
-  @media (min-width: 450px) {
-    .intro__title {
-      font-size: 2rem;
-    }
-    .intro__subtitle {
-      font-size: 1rem;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .intro__title {
-      font-size: 3rem;
-      letter-spacing: 0.8em;
-    }
-  }
+
+
+ul {
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+img {
+ width: 100%;
+ height: auto;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+.title {
+ font-size: 1.8rem;
+ font-weight: 700;
+ color: black;
+}
+
+.button {
+ background-color: rgb(82, 77, 77);
+ color: white;
+ text-transform: uppercase;
+ height: 3.5rem;
+ display: inline-flex;
+ align-items: center;
+ padding: 0 2rem;
+ border-radius: 0.25rem;
+ font-size: 1.2rem;
+ font-weight: 500;
+ transition: background .3s;
+}
+
+.button:hover {
+  background: gray;
+  color: black;
+}
+
+
+
+
+/*  ------------ LAYOUT ------------- */
+.container1 {
+ margin-left: 1.5rem;
+ margin-right: 1.5rem;
+ margin-top: 5rem;
+}
+
+.grid {
+ display: grid;
+ gap: 7rem;
+ height: 100%;
+}
+.section .title {
+ margin-bottom: 1rem;
+}
+
+
+
+/*  ------------ HOME ------------- */
+#home { 
+ overflow: hidden;
+}
+
+#home .container1 {
+ margin: 15vh auto 1rem auto; 
+}
+
+#home .image img {
+ position: relative;
+ padding: 0 3%;
+}
+
+#home .image img,
+#home .image::before {
+  border-radius: 0.25rem;
+}
+
+#home .text {
+ margin-left: 1.5rem;
+ margin-right: 1.5rem;
+ text-align: center;
+}
+
+#home .text h1 {
+  margin-bottom: 1rem;
+}
+
+#home .text p {
+  margin-bottom: 2rem;
+}
+
+
+
+/*  ------------ MEDIA QUERIES ------------- */
+/* extra large devices: 1200 >*/
+@media (min-width: 1000px) {
+ .container1 {
+     max-width: 1120px;
+     margin-left: auto;
+     margin-right: auto;
+ }
+ .section {
+     padding: 6rem 0 0 0;
+ }
+
+
+ .button {
+     height: 3.125rem;
+ }
+
+ #home {
+  margin-top: 7rem;
+  height: 100vh;
+  max-height: 600px;
+ }
+
+ 
+ /* home */
+ #home .container1 {
+     grid-auto-flow: column;
+     justify-content: space-between;
+     margin: 0 auto;
+     max-height: 750px;
+ }
+
+ .grid {
+  max-height: 750px;
+ }
+
+ #home .image {
+     order: 1;
+     margin-left: 1.5rem;
+     height: 50vh;
+ }
+
+ #home .text {
+     order: 0;
+     max-width: 24rem;
+     text-align: left;
+ }
+}
+
+
+
+
+
   
   .heading,
   .card__title,
@@ -78,7 +161,7 @@
     font-weight: bold;
     line-height: 1.6;
     letter-spacing: 0.1em;
-    color: #513a2a;
+    color: black;
     margin-bottom: 1em;
   }
   
@@ -98,6 +181,7 @@
   .card-h__title {
     font-size: 1.1rem;
     margin-bottom: 1rem;
+    color: black;
   }
   
   @media (min-width: 768px) {
@@ -123,6 +207,7 @@
   
   .grids {
     width: 100%;
+    max-width: 1120px;
     display: grid;
     position: relative;
     grid-gap: 5rem 16px;
@@ -277,9 +362,9 @@
     }
   }
   
-  .button {
+  .button2 {
     display: inline-block;
-    color: #000000;
+    color: white;
     font-weight: bold;
     padding: 8px 32px;
     text-transform: uppercase;
@@ -290,7 +375,7 @@
     cursor: pointer;
   }
   
-  .button:hover {
+  .button2:hover {
     opacity: 0.75;
   }
   
