--- a/app/about/page.css
+++ b/app/about/page.css
@@ -79,7 +79,7 @@
     font-weight: bold;
     line-height: 1.6;
     letter-spacing: 0.1em;
-    color: #513a2a;
+    color: #000000;
     margin-bottom: 1em;
   }
   
