--- a/app/page.css
+++ b/app/page.css
@@ -164,6 +164,10 @@ html {
     color: black;
     margin-bottom: 1em;
   }
+
+  .card-h__title {
+    align-self: center;
+  }
   
   .heading--display {
     font-size: 1.8rem;
@@ -203,6 +207,9 @@ html {
     width: 85%;
     margin-inline: auto;
     max-width: 1140px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
   
   .grids {
@@ -301,6 +308,7 @@ html {
   .card-h {
     width: 100%;
     display: grid;
+    align-items: center;
     grid-template-columns: 1fr;
   }
   
@@ -317,6 +325,8 @@ html {
   
   .card-h__body {
     order: 1;
+    display: flex;
+    flex-direction: column;
   }
   
   .card-h__img {
@@ -328,6 +338,7 @@ html {
   .card-h__text {
     margin-bottom: 3rem;
     max-width: 600px;
+    align-self: center;
   }
   
   .card-h--big-space {
