--- a/app/globals.css
+++ b/app/globals.css
@@ -69,7 +69,7 @@
 }
 
 .success-btn{
-    @apply bg-green-500 text-white border-2 border-green-400 py-1 px-4 rounded-md shadow-sm w-full lg:max-w-max;
+    @apply text-white border-2 py-1 px-4 rounded-md shadow-sm w-full lg:max-w-max;
 }
 
 .red-btn:hover,
