--- a/app/page.css
+++ b/app/page.css
@@ -24,7 +24,7 @@ html {
  color: black;
 }
 
-.button {
+.button1 {
  background-color: rgb(82, 77, 77);
  color: white;
  text-transform: uppercase;
@@ -38,7 +38,7 @@ html {
  transition: background .3s;
 }
 
-.button:hover {
+.button1:hover {
   background: gray;
   color: black;
 }
@@ -112,7 +112,7 @@ html {
  }
 
 
- .button {
+ .button1 {
      height: 3.125rem;
  }
 
