--- a/app/page.css
+++ b/app/page.css
@@ -1,389 +1,611 @@
 
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: hidden;
+}
+
+html {
+  width: 100vw;
+  background-color: rgb(176, 170, 170);
+}
+
+body {
+  line-height: 1.7;
+  width: 100vw;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;  
+  background-color: rgb(176, 170, 170);
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #222;
+  line-height: 1.2;
+  letter-spacing: 0.15rem;
+  text-transform: capitalize;
+}
+
+* {
+  list-style: none;
+}
+
+section {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 ul {
   list-style: none;
 }
 
-a{
-  text-decoration: none;
-}
-
-img {
- width: 100%;
- height: auto;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-
-.title {
- font-size: 1.8rem;
- font-weight: 700;
- color: black;
-}
-
-.button1 {
- background-color: rgb(82, 77, 77);
- color: white;
- text-transform: uppercase;
- height: 3.5rem;
- display: inline-flex;
- align-items: center;
- padding: 0 2rem;
- border-radius: 0.25rem;
- font-size: 1.2rem;
- font-weight: 500;
- transition: background .3s;
-}
-
-.button1:hover {
-  background: gray;
-  color: black;
-}
-
-
-
-
-/*  ------------ LAYOUT ------------- */
-.container1 {
- margin-left: 1.5rem;
- margin-right: 1.5rem;
- margin-top: 5rem;
-}
-
-.grid {
- display: grid;
- gap: 7rem;
- height: 100%;
-}
-.section .title {
- margin-bottom: 1rem;
-}
-
-
-
-/*  ------------ HOME ------------- */
-#home { 
- overflow: hidden;
-}
-
-#home .container1 {
- margin: 15vh auto 1rem auto; 
-}
-
-#home .image img {
- position: relative;
- padding: 0 3%;
-}
-
-#home .image img,
-#home .image::before {
-  border-radius: 0.25rem;
-}
-
-#home .text {
- margin-left: 1.5rem;
- margin-right: 1.5rem;
- text-align: center;
-}
-
-#home .text h1 {
+p {
   margin-bottom: 1rem;
 }
 
-#home .text p {
-  margin-bottom: 2rem;
+a {
+  text-decoration: none;
 }
 
-
-
-/*  ------------ MEDIA QUERIES ------------- */
-/* extra large devices: 1200 >*/
-@media (min-width: 1000px) {
- .container1 {
-     max-width: 1120px;
-     margin-left: auto;
-     margin-right: auto;
- }
- .section {
-     padding: 6rem 0 0 0;
- }
-
-
- .button1 {
-     height: 3.125rem;
- }
-
- #home {
-  margin-top: 7rem;
-  height: 100vh;
-  max-height: 600px;
- }
-
- 
- /* home */
- #home .container1 {
-     grid-auto-flow: column;
-     justify-content: space-between;
-     margin: 0 auto;
-     max-height: 750px;
- }
-
- .grid {
-  max-height: 750px;
- }
-
- #home .image {
-     order: 1;
-     margin-left: 1.5rem;
-     height: 50vh;
- }
-
- #home .text {
-     order: 0;
-     max-width: 24rem;
-     text-align: left;
- }
+a:hover {
+  color: #ff7d7d;
 }
 
+img {
+  width: 100%;
+}
 
+.fs-1 {
+  font-size: 3.375rem;
+}
+.fs-2 {
+  font-size: 2.25rem;
+}
+.fs-3 {
+  font-size: 2rem;
+}
+.fs-4 {
+  font-size: 1.5rem;
+}
+.fs-5 {
+  font-size: 1.125rem;
+}
 
+iframe {
+  width: 100vw;
+}
 
+@media (max-width: 678px) {
+  .fs-1 {
+    font-size: 2.5rem;
+  }
+  .fs-2 {
+    font-size: 2rem;
+  }
+  .fs-3 {
+    font-size: 1.5rem;
+  }
+  .fs-4 {
+    font-size: 1.35rem;
+  }
+  .fs-5 {
+    font-size: 1.12rem;
+  }
+}
 
-  
-  .heading,
-  .card__title,
-  .card-h__title {
-    position: relative;
-    text-transform: uppercase;
-    font-weight: bold;
-    line-height: 1.6;
-    letter-spacing: 0.1em;
-    color: black;
-    margin-bottom: 1em;
-  }
+.container {
+  width: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin: 0 auto;
+  max-width: 1370px;
+}
 
-  .card-h__title {
-    align-self: center;
+.col-2-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  align-items: center;
+}
+
+.col-3-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+
+.col-3-grid2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+
+.col-4-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+
+@media (max-width: 996px) {
+  .col-4-grid {
+    grid-template-columns: 1fr 1fr;
   }
-  
-  .heading--display {
-    font-size: 1.8rem;
-    margin-bottom: 4rem;
-  }
-  
-  .heading--header {
-    position: relative;
-    font-size: 1.3rem;
-    margin-bottom: 3rem;
-  }
-  
-  .heading--title,
-  .card__title,
-  .card-h__title {
-    font-size: 1.1rem;
-    margin-bottom: 1rem;
-    color: black;
-  }
-  
-  @media (min-width: 768px) {
-    .heading--display {
-      font-size: 2.3rem;
-      margin-bottom: 6rem;
-    }
-    .heading--header {
-      font-size: 1.7rem;
-      margin-bottom: 5rem;
-    }
-  }
-  
-  .section--padding {
-    padding-bottom: 5rem;
-  }
-  
-  .container {
-    width: 85%;
-    margin-inline: auto;
-    max-width: 1140px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .grids {
-    width: 100%;
-    max-width: 1120px;
-    display: grid;
-    position: relative;
-    grid-gap: 5rem 16px;
-    margin: 0 auto;
+}
+
+@media (max-width: 778px) {
+  .col-2-grid {
     grid-template-columns: 1fr;
   }
-  
-  .grid--12 {
-    grid-template-columns: 1fr;
-    grid-gap: 128px;
-  }
-  
-  @media (min-width: 768px) {
-    .grid--12 {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  
-  .grid--13 {
+  .col-3-grid {
     grid-template-columns: 1fr;
   }
-  
-  @media (min-width: 768px) {
-    .grid--13 {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
-  
-  .grid--123 {
+  .col-3-grid2 {
     grid-template-columns: 1fr;
   }
-  
-  @media (min-width: 768px) {
-    .grid--123 {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .grid--123 {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
-  
-  .grid--2v3 {
+  .col-4-grid {
     grid-template-columns: 1fr;
-    grid-gap: 48px 64px;
   }
+}
+
+.card {
+  box-shadow: 3px 6px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s linear;
+}
+
+.card:hover {
+  box-shadow: 3px 6px 15px rgba(0, 0, 0, 0.3);
+}
+
+.hover-effect {
+  transition: all 0.3s linear;
+}
+.hover-effect:hover {
+  transform: scale(105%);
+}
+
+a:hover {
+  color: #fff;
+}
+
+.btn {
+  background-color: #424242;
+  color: #fff;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 12px 28px;
+  transition: all 0.3s linear;
+  align-self: center;
+  margin-top: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #653c3c;
+  color: #fff;
+}
+
+.btn-outline {
+  background-color: transparent;
+  border-color: 1px solid #fff;
+  color: #fff;
+}
+
+.section-header {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.section-header p {
+  max-width: 700px;
+  margin: 0 auto;
+  font-size: 1.5rem;
+}
+
+/* Own carousel reset */
+
+.owl-carousel .owl-nav button.owl-prev,
+.owl-carousel .owl-nav button.owl-next {
+  width: 60px;
+  height: 60px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #ff7d7d;
+  border-radius: 0;
+  font-size: 24px;
+}
+
+.owl-carousel .owl-nav button.owl-prev:hover,
+.owl-carousel .owl-nav button.owl-next:hover {
+  /* background-color: #ff7d7d; */
+  color: #ff7d7d;
+}
+
+/* navbar */
+/* .navbar {
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 5;
+  background-color: rgb(0, 0, 0);
+  height: 7vh;
+  border-bottom: 1px solid rgb(42, 41, 41);
+  padding: 0 auto;
+} */
+
+.navbar .container {
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  margin: 0;
+  height: 100%;
+  width: 1007px;
+  padding-left: 0;
+  padding-right: 0;
   
-  @media (min-width: 768px) {
-    .grid--2v3 {
-      grid-template-columns: 2fr 3fr;
-    }
+}
+
+.navbar .name h1 {
+  width: 40%;
+  min-width: 150px;
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin: auto 0;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+}
+
+.nav-item {
+  margin-left: 1.2rem;
+}
+
+.nav-item a {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 0.05rem;
+  transition: all 0.3s ease;
+  color: #fff;
+}
+
+.nav-item a:hover {
+  color: #ff7d7d;
+}
+
+.nav-toggle {
+  display: none;
+  position: relative;
+  cursor: pointer;
+  width: 1.5rem;
+  height: 1.5rem;
+  position: relative;
+  background-color: transparent;
+  border: none;
+  z-index: 10;
+  transition: all 0.3s ease;
+  margin: auto 0;
+}
+
+.line-1,
+.line-2,
+.line-3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 2px;
+  background-color: white;
+  transform: rotate(0);
+  transition: all 0.3s ease;
+  border-radius: 10px;
+}
+
+.line-2 {
+  transform: translateY(7px);
+}
+
+.line-3 {
+  transform: translateY(14px);
+}
+
+.open .line-1 {
+  transform: rotate(45deg) translateY(6px) translateX(6px);
+}
+.open .line-2 {
+  display: none;
+}
+.open .line-3 {
+  transform: rotate(-45deg) translateY(6px) translateX(-6px);
+}
+
+@media (max-width: 768px) {
+
+  .nav-toggle {
+    display: block;
   }
-  
-  @media (min-width: 992px) {
-    .grid--2v3 {
-      grid-gap: 48px 128px;
-    }
-    .container {
-      min-height: 985px;
-      margin-bottom: 2rem;
-    }
-  }
-  
-  @media (max-height: 950px) {
-    .intro {
-      max-height: 887px;
-    }
-  }
-  
-  @media (max-height: 650px) {
-    .intro {
-      max-height: 587px;
-    }
-  }
-  
-  .bg {
+
+  .nav-list {
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -999;
-  }
-  
-  .bg--center {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .card-h {
     width: 100%;
-    display: grid;
-    align-items: center;
+    top: 100%;
+    left: -150%;
+
+    background-color: rgba(34, 34, 34, 0.903);
+    flex-direction: column;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    z-index: 10;
+  }
+
+  .nav-item {
+    margin-left: 0;
+    padding: 1rem;
+    padding-left: 2rem;
+    width: 100%;
+  }
+
+  .nav-item:hover {
+    background-color: rgb(98, 97, 97);
+  }
+
+  .nav-item a {
+    transition: all 0.3s ease;
+    color: #fff;
+  }
+
+  .show {
+    left: 0;
+  }
+}
+
+/* About */
+
+#about {
+  background-color: rgb(176, 170, 170);
+}
+
+#about .content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+}
+
+.content * {
+  align-self: center;
+}
+
+.col-2-grid2 {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 3rem;
+  align-items: center;
+  height: auto;
+}
+
+.col-2-grid2 img {
+  max-width: 500px;
+  justify-self: end;
+}
+
+@media (max-width: 1023px) {
+  .col-2-grid2 {
     grid-template-columns: 1fr;
   }
-  
-  @media (min-width: 992px) {
-    .card-h {
-      grid-template-columns: 1fr 1fr;
-    }
+
+  .col-2-grid2 img {
+    max-width: 100%;
+    max-height: 500px;
   }
-  
-  .card-h__header {
-    order: 0;
-    min-height: 250px;
+}
+
+#about h3 {
+  margin-bottom: 1.5rem;
+}
+
+#about p {
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+
+
+/* services */
+
+#services {
+  background-color: rgb(176, 170, 170);
+}
+
+.course h3 {
+  color: #222;
+}
+
+.course img {
+  display: block;
+}
+
+@media (max-width: 678px) {
+  .course {
+    margin: 0.5rem 1.5rem;
   }
-  
-  .card-h__body {
-    order: 1;
-    display: flex;
-    flex-direction: column;
+}
+
+@media (min-width: 779px) and (max-width: 1023px) {
+  .course h3 {
+    font-size: 1rem;
   }
-  
-  .card-h__img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+}
+
+@media (max-width: 778px) {
+  .course h3 {
+    font-size: 1.5rem;
   }
-  
-  .card-h__text {
-    margin-bottom: 3rem;
-    max-width: 600px;
-    align-self: center;
+}
+
+@media (min-width: 1023px) {
+  .course h3 {
+    font-size: 1.5rem;
   }
-  
-  .card-h--big-space {
-    grid-gap: 32px 64px;
+}
+
+.course-info {
+  padding: 1.8rem 0.5rem;
+  background-color: #cfc8c8;
+}
+
+/* contact */
+
+#contact {
+  background-color: rgb(176, 170, 170);
+}
+
+.contact-info {
+  text-align: center;
+  padding: 24px;
+}
+
+.contact-info i {
+  color: #ff7d7d;
+  font-size: 32px;
+}
+
+.form {
+  width: 100%;
+  padding: 60px;
+}
+
+.map {
+  height: 400px;
+  margin: 5rem 0;
+}
+
+
+/* footer */
+
+#footer{
+  padding: 100px 0 20px;
+  background-color:  rgb(23, 23, 23);
+  position: relative;
+}
+
+
+#footer h1 {
+  color: white;
+}
+
+.footer-row{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.footer-left,.footer-right{
+  flex-basis: 45%;
+  padding: 10px;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+.footer-right{
+  text-align: right;
+}
+.footer-row h1{
+  margin: 10px 0;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: white;
+}
+.footer-row p{
+  line-height: 35px;
+}
+.footer-left .fa,.footer-right .fa{
+  font-size: 20px;
+  color: #009688;
+  margin: 10px;
+}
+.footer-img{
+  max-width: 370px;
+  opacity: 0.1;
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%,-50%);
+}
+.social-links{
+  text-align: center;
+}
+
+
+@media screen and (max-width: 770px){
+  .footer-left,.footer-right{
+      flex-basis: 100%;
+      font-size: 14px;
   }
-  
-  @media (min-width: 992px) {
-    .card-h--big-space {
-      grid-gap: 64px 128px;
-    }
+  .footer-img{
+      top: 25%;
   }
-  
-  @media (min-width: 992px) {
-    .card-h--2v3 {
-      grid-template-columns: 2fr 3fr;
-    }
+}
+
+.right p {
+  margin: auto 0;
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+  margin: 1.5rem auto;
+  color: #000;
+}
+
+.icon2 {
+  width: 15px;
+  color: white;
+  margin: auto 0 auto 1rem ;
+  margin-left: 1rem;
+}
+
+.icon3 {
+  width: 15px;
+  color: white;
+}
+
+.features {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.col-3-grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+
+
+@media (max-width: 778px) {
+  .col-3-grid3 {
+    grid-template-columns: 1fr;
+    max-width: 400px;
+    margin: 0 auto;
   }
-  
-  @media (min-width: 992px) {
-    .card-h--3v2 {
-      grid-template-columns: 3fr 2fr;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .card-h--rev .card-h__header {
-      order: 1;
-    }
-  
-    .card-h--rev .card-h__body {
-      order: 0;
-    }
-  }
-  
-  .img {
-    width: 100%;
-    max-width: 500px;
-  }
-  
-  .img--shadow {
-    box-shadow: 0 20px 50px #888;
-  }
-  
-  .img--bw {
-    filter: (100);
-  }
-  
-  
+}
