--- a/components/Reviews.css
+++ b/components/Reviews.css
@@ -54,7 +54,7 @@
   }
   
   .review {
-  background: #7a6464;
+  background: #747070;
   position: relative;
   display: flex;
   justify-items: center;
