--- a/app/page.css
+++ b/app/page.css
@@ -128,7 +128,7 @@ iframe {
 
 .col-3-grid2 {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 3rem;
   align-items: center;
 }
@@ -477,6 +477,10 @@ a:hover {
 
 #contact {
   background-color: rgb(176, 170, 170);
+}
+
+#contact a:hover {
+  color: rgb(0, 0, 0);
 }
 
 .contact-info {
