--- a/app/page.css
+++ b/app/page.css
@@ -64,6 +64,7 @@ a:hover {
 
 img {
   width: 100%;
+  max-width: 600px;
 }
 
 .fs-1 {
@@ -109,7 +110,7 @@ iframe {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin: 0 auto;
-  max-width: 1370px;
+  max-width: 1280px;
 }
 
 .col-2-grid {
@@ -235,149 +236,6 @@ a:hover {
   /* background-color: #ff7d7d; */
   color: #ff7d7d;
 }
-
-/* navbar */
-/* .navbar {
-  position: sticky;
-  width: 100%;
-  top: 0;
-  z-index: 5;
-  background-color: rgb(0, 0, 0);
-  height: 7vh;
-  border-bottom: 1px solid rgb(42, 41, 41);
-  padding: 0 auto;
-} */
-
-.navbar .container {
-  display: flex;
-  justify-content:space-between;
-  align-items: center;
-  margin: 0;
-  height: 100%;
-  width: 1007px;
-  padding-left: 0;
-  padding-right: 0;
-  
-}
-
-.navbar .name h1 {
-  width: 40%;
-  min-width: 150px;
-  color: white;
-  font-size: 1.3rem;
-  font-weight: 700;
-  margin: auto 0;
-}
-
-.nav-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
-
-.nav-item {
-  margin-left: 1.2rem;
-}
-
-.nav-item a {
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  letter-spacing: 0.05rem;
-  transition: all 0.3s ease;
-  color: #fff;
-}
-
-.nav-item a:hover {
-  color: #ff7d7d;
-}
-
-.nav-toggle {
-  display: none;
-  position: relative;
-  cursor: pointer;
-  width: 1.5rem;
-  height: 1.5rem;
-  position: relative;
-  background-color: transparent;
-  border: none;
-  z-index: 10;
-  transition: all 0.3s ease;
-  margin: auto 0;
-}
-
-.line-1,
-.line-2,
-.line-3 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 24px;
-  height: 2px;
-  background-color: white;
-  transform: rotate(0);
-  transition: all 0.3s ease;
-  border-radius: 10px;
-}
-
-.line-2 {
-  transform: translateY(7px);
-}
-
-.line-3 {
-  transform: translateY(14px);
-}
-
-.open .line-1 {
-  transform: rotate(45deg) translateY(6px) translateX(6px);
-}
-.open .line-2 {
-  display: none;
-}
-.open .line-3 {
-  transform: rotate(-45deg) translateY(6px) translateX(-6px);
-}
-
-@media (max-width: 768px) {
-
-  .nav-toggle {
-    display: block;
-  }
-
-  .nav-list {
-    position: absolute;
-    width: 100%;
-    top: 100%;
-    left: -150%;
-
-    background-color: rgba(34, 34, 34, 0.903);
-    flex-direction: column;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    z-index: 10;
-  }
-
-  .nav-item {
-    margin-left: 0;
-    padding: 1rem;
-    padding-left: 2rem;
-    width: 100%;
-  }
-
-  .nav-item:hover {
-    background-color: rgb(98, 97, 97);
-  }
-
-  .nav-item a {
-    transition: all 0.3s ease;
-    color: #fff;
-  }
-
-  .show {
-    left: 0;
-  }
-}
-
 /* About */
 
 #about {
@@ -408,14 +266,28 @@ a:hover {
   justify-self: end;
 }
 
+.col-2-grid2 .content {
+  padding: 0 1.5rem;
+}
+
 @media (max-width: 1023px) {
   .col-2-grid2 {
     grid-template-columns: 1fr;
   }
 
   .col-2-grid2 img {
-    max-width: 100%;
+    max-width: 650px;
     max-height: 500px;
+    justify-self: center;
+  }
+  .col-2-grid2 .content {
+    padding: 0 2rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .col-2-grid2 .content {
+    padding: 0 0.5rem;
   }
 }
 
@@ -506,11 +378,17 @@ a:hover {
 
 /* footer */
 
+footer {
+  background-color:  rgb(23, 23, 23);
+}
+
 #footer{
   padding: 100px 0 20px;
-  background-color:  rgb(23, 23, 23);
   position: relative;
+  margin: 0 auto;
 }
+
+
 
 
 #footer h1 {
@@ -519,6 +397,7 @@ a:hover {
 
 .footer-row{
   width: 80%;
+  max-width: 1380px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
