--- a/app/page.css
+++ b/app/page.css
@@ -16,9 +16,14 @@ body {
   line-height: 1.7;
   width: 100vw;
   overflow-x: hidden;
+  overflow-y: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;  
-  background-color: rgb(176, 170, 170);
+  background-image: url(/images/image3.jpeg);
+  background-blend-mode: multiply;
+  background-position: center;
+  background-size: contain;
+  background-repeat: repeat;
 }
 
 body::-webkit-scrollbar {
@@ -35,7 +40,6 @@ h3,
 h4,
 h5,
 h6 {
-  color: #222;
   line-height: 1.2;
   letter-spacing: 0.15rem;
   text-transform: capitalize;
@@ -189,18 +193,19 @@ a:hover {
 .btn {
   background-color: #424242;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
   display: inline-block;
-  padding: 12px 28px;
+  padding: 8px 16px;
   transition: all 0.3s linear;
   align-self: center;
   margin-top: 1.5rem;
+  border-radius: 0.5rem;
 }
 
 .btn:hover {
-  background-color: #653c3c;
+  background-color: #0b0b0b;
   color: #fff;
 }
 
@@ -221,25 +226,7 @@ a:hover {
   font-size: 1.5rem;
 }
 
-/* Own carousel reset */
 
-.owl-carousel .owl-nav button.owl-prev,
-.owl-carousel .owl-nav button.owl-next {
-  width: 60px;
-  height: 60px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: #ff7d7d;
-  border-radius: 0;
-  font-size: 24px;
-}
-
-.owl-carousel .owl-nav button.owl-prev:hover,
-.owl-carousel .owl-nav button.owl-next:hover {
-  /* background-color: #ff7d7d; */
-  color: #ff7d7d;
-}
 /* About */
 
 #about {
@@ -309,7 +296,7 @@ a:hover {
 /* services */
 
 #services {
-  background-color: rgb(176, 170, 170);
+  color: white;
 }
 
 .course h3 {
