--- a/components/Hero.css
+++ b/components/Hero.css
@@ -1,134 +1,96 @@
-
-
-a{
-    text-decoration: none;
-  }
-  
-  
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  
-  .title {
-   font-size: 1.8rem;
-   font-weight: 700;
-   color: black;
-   margin-bottom: 1rem;
-   margin-top: 1rem;
-  }
-  
-  .button1 {
-   background-color: rgb(82, 77, 77);
-   color: white;
-   text-transform: uppercase;
-   height: 3.5rem;
-   display: inline-flex;
-   align-items: center;
-   padding: 0 2rem;
-   border-radius: 0.25rem;
-   font-size: 1.5rem;
-   font-weight: 600;
-  }
-  
-  .button1:hover {
-    background: gray;
-    color: black;
-  }
-  
-  
-  
-  
-  /*  ------------ HOME ------------- */
-  .section3 { 
-   overflow: hidden;
-   background-color: rgb(176, 170, 170);
-   padding-bottom: 3rem;
-  }
-  #home .image1 {
-    margin: 0 auto;
-  }
-  
-  #home .image1 img {
-   position: relative;
-   padding: 0 3%;
-   max-width: 650px;
-   margin: auto;
-  }
-  
-  #home .image1 img,
-  #home .image1::before {
-    border-radius: 0.25rem;
-  }
-  
-  #home .text h1 {
-    margin-bottom: 1rem;
-  }
-  
-  #home .text p {
-    margin-bottom: 2rem;
-  }
-
-  .image1 {
-    width: 100%;
-  }
-
-  #home .text {
-    padding: 0 1.5rem;
-    max-width: 700px;
-    margin: 0 auto;
-    text-align: center;
+.intro {
+  position: relative;
+  width: 100vw;
+  height: 93vh;
+  min-height: 640px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 0;
+  margin-bottom: 4rem;
 }
-  
-  
-  /*  ------------ MEDIA QUERIES ------------- */
-  /* extra large devices: 1200 >*/
-  @media (min-width: 1024px) {
-   .button1 {
-       height: 3.125rem;
-   }
-  
-   #home {
-    margin-top: 7rem;
-   }
-  
-   
-   /* home */
-   #home .container5 {
-       grid-auto-flow: column;
-       justify-content: space-between;
-       max-height: 750px;
-       max-width: 1280px;
-       margin: 0 auto;
-       padding: 0 2.5rem;
-       
-   }
 
-   
-  
-   #home .image1 {
-       order: 1;
-       margin-left: 1.5rem;
-   }
-  
-   #home .text {
-       order: 0;
-       max-width: 24rem;
-       text-align: left;
-       padding: 0 3rem;
-   }
+.intro__panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+}
 
-   .title {
-    margin-top: 0;
-    padding: 0;
-   }
+.intro__picture img {
+  width: 40vw;
+  max-width: 600px;
+  height: auto;
+  max-height: 45vh;
+  margin-bottom: 3rem;
+  min-width: 200px;
+}
+
+.intro__title {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  line-height: 1.4;
+  letter-spacing: 0.5em;
+  font-weight: bold;
+  transform: translateX(0.25em);
+  margin-bottom: 3rem;
+}
+
+.intro__subtitle {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  line-height: 1.4;
+  letter-spacing: 0.3em;
+  font-weight: 500;
+  transform: translateX(0.25em);
+}
+
+.button1 {
+  background-color: #bbbbbb;
+  color: #000000;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.button1:hover {
+  background-color: #707070;
+  color: #ffffff;
+}
+
+@media (min-width: 450px) {
+  .intro__title {
+    font-size: 2rem;
   }
-
-  @media (max-width: 640px) {
-    .text {
-      padding: 0 0.2rem;
-    }
+  .intro__subtitle {
+    font-size: 1.4rem;
+    font-weight: 600;
   }
+}
 
-  
-   
+@media (min-width: 640px) and (min-height: 900px) {
+  .intro__panel {
+    padding-top: 10rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .button1 {
+    margin-top: 3rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .intro__title {
+    font-size: 3rem;
+    letter-spacing: 0.8em;
+  }
+}
+
+@media (min-width: 1280px) {
+  .intro__panel {
+    padding-top: 2rem;
+  }
+}
