--- a/components/Price.css
+++ b/components/Price.css
@@ -1,34 +1,47 @@
-.price-page {
+
+  
+  /* //////////////////////////////
+  ///////////////////////////// */
+
+  .price-page {
     padding: 20px;
+    margin-top: 4rem;
   }
   
   .price-page__title {
     text-align: center;
     font-size: 24px;
     margin-bottom: 20px;
+    color: #ffffff;
   }
   
   .price-page__services {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 0;
+    margin-top: 4rem;
   }
   
   .price-page__service {
+    width: 100%;
     background-color: #cfc8c8;
-    box-shadow: 0 2px 6px rgba(92, 91, 91, 0.4); 
-    padding: 20px;
-    border-radius: 5px;
+    padding: 1.5rem 2rem;
     text-align: center;
+    border: none;
+    margin-bottom: -1px;
+  }
+  
+  .price-page__service-info {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 1.5rem ;
+    align-items: center;
+    width: 100%;
   }
   
   .price-page__service-title {
     font-size: 18px;
     margin-bottom: 10px;
+    color: #000000;
   }
   
   .price-page__service-price {
@@ -36,20 +49,56 @@
     font-weight: bold;
     color: #000000;
   }
-
+  
+  .price-page__service-divider {
+    width: 80%;
+    height: 1px;
+    background-color: transparent;
+    border: none;
+    border-top: 2px black dotted;
+    margin: 0 1rem;
+  }
+  
+  .price-page__service-info img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+  
   .fs-1 {
     font-size: 3.375rem;
   }
   
-  @media (max-width: 678px) {
+  @media (max-width: 640px) {
     .fs-1 {
       font-size: 2.5rem;
     }
+    .price-page__service {
+      padding: 1rem;
+    }
+  
+    .price-page__service-info img {
+      width: 70px;
+      height: 70px;
+    }
+  
   }
   
-  @media (max-width: 600px) {
+  @media (max-width: 1023px) {
     .price-page__services {
       grid-template-columns: 1fr;
     }
   }
+  
+  @media (min-width: 1024px) {
+    .price-page__service-divider {
+      margin: 0 2.2rem;
+    }
+  
+    .price-page__service {
+      padding: 1rem 2rem;
+    }
+  }
+  
   
