--- a/app/page.css
+++ b/app/page.css
@@ -392,6 +392,8 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  max-width: 1200px;
+
 }
 .footer-left,.footer-right{
   flex-basis: 45%;
